--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="./css/form.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <a href="http://bugraates.com.tr/" id="back-button">Geri Dön</a>
     </header>
 
-    <form action="ajax.php" class="form" id="form1" novalidate>
+    <form action="./php/ajax.php" class="form" id="form1" novalidate>
         <h3>Form Örneği</h3>
         <ul>
             <li>
@@ -81,8 +81,8 @@
         </ul>
     </form>
 
-    <script src=".\validation.js"></script>
-    <script src=".\form.js"></script>
+    <script src="./js/validation.js"></script>
+    <script src="./js/form.js"></script>
 
 </body>
 
