--- a/form.html
+++ b/form.html
@@ -15,6 +15,7 @@
     </header>
 
     <form action="./php/ajax.php" class="form" id="form1" novalidate>
+      <div class="container">
         <h3>Form Örneği</h3>
         <ul>
             <li>
@@ -61,7 +62,7 @@
             </li>
             <li>
                 <label>Hakkınızda : </label>
-                <textarea name="about" cols="30" rows="5" required></textarea>
+                <textarea name="about" cols="5" rows="10" required></textarea>
             </li>
             <li>
                 <button type="submit">Gönder</button>
@@ -80,7 +81,7 @@
             </li>
         </ul>
     </form>
-
+  </div>
     <script src="./js/validation.js"></script>
     <script src="./js/form.js"></script>
 
